--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "fs-extra": "^11.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "openai": "^3.2.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
